--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 
   <title>Profile card component</title>
 
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&family=Quicksand:wght@300;500;700&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
