--- a/index.html
+++ b/index.html
@@ -19,34 +19,39 @@
 </head>
 
 <body>
-  <div class="profile-card">
-    <div class="profile-card-top">
-      <img src="./assets/image-victor.jpg" alt="profile image">
-    </div>
-    <div class="profile-card-bottom">
-      <div class="profile-card-bottom__datos-profile">
-        <div>
-          <span>Victor Crest</span>
-          <span>26</span>
-        </div>
-        <p>London</p>
+  <section class="main">
+    <div class="profile-card">
+      <div class="profile-card-top">
       </div>
-      <div class="profile-card-bottom__datos-seguidores">
-        <div>
-          <p>80K</p>
-          <p>Followers</p>
+      <div class="image">
+
+        <img src="./assets/image-victor.jpg" alt="profile image">
+      </div>
+      <div class="profile-card-bottom">
+        <div class="profile-card-bottom__datos-profile">
+          <div>
+            <span>Victor Crest</span>
+            <span>26</span>
+          </div>
+          <p>London</p>
         </div>
-        <div>
-          <p>803K</p>
-          <p>Likes</p>
-        </div>
-        <div>
-          <p>1.4K</p>
-          <p>Photos</p>
+        <div class="profile-card-bottom__datos-seguidores">
+          <div>
+            <p>80K</p>
+            <p>Followers</p>
+          </div>
+          <div>
+            <p>803K</p>
+            <p>Likes</p>
+          </div>
+          <div>
+            <p>1.4K</p>
+            <p>Photos</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+  </section>
 </body>
 
 </html>
