--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <title>Profile card component</title>
 
   <link rel="stylesheet" href="./style/style.css">
+  <link rel="stylesheet" href="./style/desktop1440.css" media="screen and (min-width: 1440px)">
+  <link rel="stylesheet" href="./style/desktop1024.css" media="screen and (min-width: 1024px)">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
